istio-config/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway
  name: istio-ingressgateway
  namespace: istio-system
spec:
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ports:
    - name: status-port
      nodePort: 30447
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: tls-istiod
      nodePort: 31304
      port: 15012
      protocol: TCP
      targetPort: 15012
    - name: tls
      nodePort: 31371
      port: 15443
      protocol: TCP
      targetPort: 15443
    - name: http2
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      nodePort: 30443
      port: 443
      protocol: TCP
      targetPort: 443
    - name: nginx-service
      nodePort: 31011
      port: 31011
      protocol: TCP
      targetPort: 31011
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: NodePort
